deploy/keycloak/030-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: sso
  annotations:
    route.openshift.io/termination: reencrypt
spec:
  rules:
    - host: sso-drogue-public-temperature.apps.wonderful.iot-playground.org
      http:
        paths:
          - backend:
              service:
                name: keycloak
                port:
                  name: keycloak
            path: /
            pathType: Prefix
